<resources>
    <string name="app_name">HomeHaven</string>
    <string name="login_str">Login</string>
    <string name="email_str">Email</string>
    <string name="password_str">Password</string>
    <string name="roomString">Room Name</string>
    <string name="title_activity_drawer">drawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Home Haven</string>
    <string name="nav_header_subtitle">contact@homehaven.website</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_usage_and_prediction">Usage and Prediction</string>
    <string name="menu_device_control">Device Control</string>
    <string name="menu_night_mode_config">Night Mode Config</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign Out</string>

    <string name="zero_string">000</string>
    <string name="electricity__being_consumed">Electricity currently being consumed</string>
    <string name="currency">PKR</string>
    <string name="compare">%  compare to previous</string>
    <string name="bill_prediction_string">Current Month Bill Prediction</string>
    <string name="bill_predictometer_string">Bill Predictometer</string>
    <string name="watts_string">Watts</string>
    <string name="power_consumption_string">Power Consumption</string>
    <string name="last_month_bill_string">Last Month Bill</string>
    <string name="night_mode_rooms">Night Mode Rooms</string>
    <string name="rooms">Rooms</string>
</resources>
