<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#180bcdef"
    tools:context=".ui.usage_and_prediction.UsageAndPredictionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bill_predition_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/zero_string"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/currency"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/bill_predition_TV"
                app:layout_constraintStart_toEndOf="@+id/bill_predition_TV" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/currency"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/previous_bill_TV"
                app:layout_constraintStart_toEndOf="@+id/previous_bill_TV" />

            <pl.pawelkleczkowski.customgauge.CustomGauge
                android:id="@+id/gauge1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                app:gaugeDividerColor="@color/colorAccent"
                app:gaugeDividerDrawFirst="true"
                app:gaugeDividerDrawLast="true"
                app:gaugeDividerSize="4"
                app:gaugeDividerStep="10"
                app:gaugeEndValue="1000"
                app:gaugePointEndColor="@color/colorPrimaryDark"
                app:gaugePointSize="0"
                app:gaugePointStartColor="@color/colorAccent"
                app:gaugeStartAngle="135"
                app:gaugeStartValue="0"
                app:gaugeStrokeCap="BUTT"
                app:gaugeStrokeColor="@color/design_default_color_background"
                app:gaugeStrokeWidth="20dp"
                app:gaugeSweepAngle="270"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6_HF" />

            <TextView
                android:id="@+id/bill_compare_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/compare"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bill_predition_TV" />

            <TextView
                android:id="@+id/textView9_HF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/textviewunderline"
                android:padding="10sp"
                android:text="@string/last_month_bill_string"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bill_compare_TV" />

            <TextView
                android:id="@+id/compumptiontxtTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/power_consumption_string"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/gauge1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/wattsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/watts_string"
                app:layout_constraintBottom_toBottomOf="@+id/consumpTV"
                app:layout_constraintStart_toEndOf="@+id/consumpTV" />

            <TextView
                android:id="@+id/textView7_HF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/textviewunderline"
                android:padding="10sp"
                android:text="@string/bill_predictometer_string"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/power_compare_TV" />

            <TextView
                android:id="@+id/consumpTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="24dp"
                android:text="@string/zero_string"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/gauge1" />

            <TextView
                android:id="@+id/power_compare_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/compare"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gauge1" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/bill_prediction_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7_HF" />

            <TextView
                android:id="@+id/previous_bill_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/zero_string"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9_HF" />

            <TextView
                android:id="@+id/textView6_HF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/textviewunderline"
                android:padding="10sp"
                android:text="@string/electricity__being_consumed"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>